[gd_scene load_steps=5 format=2]

[ext_resource path="res://ui/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/msgBox/msgBox.gd" type="Script" id=2]
[ext_resource path="res://res/ui/descriptionBar.png" type="Texture" id=3]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 256, 256 )
margin_left = 24.6132
margin_right = 29.8875
margin_top = 38.6779
margin_bottom = 38.6779
expand_margin_top = 38.0

[node name="WindowDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -284.5
margin_top = -114.5
margin_right = 284.5
margin_bottom = 114.5
theme = ExtResource( 1 )
custom_styles/panel = SubResource( 1 )
window_title = "提示"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 39.0
margin_right = 543.0
margin_bottom = 149.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -41.5
margin_top = -67.3754
margin_right = 41.5
margin_bottom = -24.0
text = "确定"
[connection signal="hide" from="." to="." method="_on_WindowDialog_hide"]
[connection signal="popup_hide" from="." to="." method="_on_WindowDialog_popup_hide"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
